src/objects/Ewarehouse_Harvest__c.object
<CustomObject>
    <fields>
        <fullName>Beans_Harvested__c</fullName>
        <label>Beans Harvested</label>
        <summarizedField>Ewarehouse_Harvest_Crop__c.Beans_Harvested__c</summarizedField>
        <summaryForeignKey>Ewarehouse_Harvest_Crop__c.Ewarehouse_Harvest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Black_Beans_Harvested__c</fullName>
        <label>Black Beans Harvested</label>
        <summarizedField>Ewarehouse_Harvest_Crop__c.Black_Beans_Harvested__c</summarizedField>
        <summaryForeignKey>Ewarehouse_Harvest_Crop__c.Ewarehouse_Harvest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cow_Peas_Harvested__c</fullName>
        <label>Cow Peas Harvested</label>
        <summarizedField>Ewarehouse_Harvest_Crop__c.Cow_Peas_Harvested__c</summarizedField>
        <summaryForeignKey>Ewarehouse_Harvest_Crop__c.Ewarehouse_Harvest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ewarehouse_Farmer__c</fullName>
        <label>Ewarehouse Farmer</label>
        <referenceTo>Ewarehouse_Farmer__c</referenceTo>
        <relationshipLabel>Ewarehouse Harvests</relationshipLabel>
        <relationshipName>Ewarehouse_Harvests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Green_Grams_Harvested__c</fullName>
        <label>Green Grams Harvested</label>
        <summarizedField>Ewarehouse_Harvest_Crop__c.Green_Grams_Harvested__c</summarizedField>
        <summaryForeignKey>Ewarehouse_Harvest_Crop__c.Ewarehouse_Harvest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Harvest_Date__c</fullName>
        <label>Harvest Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maize_Harvested__c</fullName>
        <label>Maize Harvested</label>
        <summarizedField>Ewarehouse_Harvest_Crop__c.Maize_Harvested__c</summarizedField>
        <summaryForeignKey>Ewarehouse_Harvest_Crop__c.Ewarehouse_Harvest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Notification_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notification Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pigeon_Peas_Harvested__c</fullName>
        <label>Pigeon Peas Harvested</label>
        <summarizedField>Ewarehouse_Harvest_Crop__c.Pigeon_Peas_Harvested__c</summarizedField>
        <summaryForeignKey>Ewarehouse_Harvest_Crop__c.Ewarehouse_Harvest__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Storage_Locale__c</fullName>
        <label>Storage Locale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Location__c</fullName>
        <label>Storage Location</label>
        <picklist>
            <picklistValues>
                <fullName>House on ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House off ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granary on ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granary off ground</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Storage_Materials__c</fullName>
        <label>Storage Materials</label>
        <picklist>
            <picklistValues>
                <fullName>Gunney bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plastic bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jute bags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dedicated room</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clay Pots</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Ewarehouse Harvest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Storage_Location__c</columns>
        <columns>Notification_Sent__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Ewarehouse_Farmer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ewarehouse Harvest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ewarehouse Harvests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>